tests/invalid/DefiniteAssign_Invalid_4.whiley
method f(any this) -> void:
    debug a

method g() -> void:
    f(x)
